[gd_scene load_steps=2 format=2]

[ext_resource path="res://Resoure_editer2.1/Useable.gd" type="Script" id=1]

[node name="Useable" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 71.2748
margin_top = -17.492
margin_right = 126.275
margin_bottom = -3.49203
text = "Action.gd"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Delete" type="Button" parent="."]
margin_left = 223.0
margin_top = 24.0
margin_right = 278.0
margin_bottom = 44.0
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hide" type="Button" parent="."]
margin_left = 223.0
margin_right = 278.0
margin_bottom = 20.0
text = "Hide"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 220.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move" type="Button" parent="MarginContainer"]
margin_right = 220.0
margin_bottom = 20.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 220.0
margin_bottom = 20.0
rect_min_size = Vector2( 220, 20 )
mouse_filter = 2
color = Color( 0.145098, 0.0392157, 0.0392157, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 220.0
margin_bottom = 20.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Delete" to="." method="_on_Delete_button_up"]
[connection signal="button_up" from="Hide" to="." method="_on_Hide_button_up"]
[connection signal="button_down" from="MarginContainer/Move" to="." method="_on_Move_button_down"]
